[package]
name = "window_median"
version = "0.1.0"
authors = ["Elvin Yang <eyang@cs.utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.3"
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "wm_benchmark"
harness = false
